--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </header>
           <!-- Hero section -->
         
-          <section class="hero-text-container hero">
+          <section class="hero-text-container">
                 <h3 class="first-roboto">ROBOTO</h3>
                 <h3 class="second-roboto">ROBOTO</h3>
                 <h3 class="third-roboto">ROBOTO</h3>
@@ -91,7 +91,7 @@
                   </section>
               </section>
 
-          </section>
+  </section>
 
           </div>
           </section>
